<resources>
    <string name="app_name">WIQUIZ</string>
    <string name="action_settings">Settings</string>
    <string name="Introduce_Yourself">Introduce Yourself</string>
    <string name="Next">Next</string>
    <string name="WI_QUIZ">WI-QUIZ</string>
    <string name="t1">NAME:</string>
    <string name="t2">Enter Name</string>
    <string name="t3">GENDER:</string>
    <string name="t4">UPLOAD</string>
    <string name="t5">MALE</string>
    <string name="t6">FEMALE</string>

    <string name="t7">EDIT PROFILE</string>
    <string name="t8">ADD CATEGORY</string>
    <string name="t9">SHARE CATEGORY</string>
    <string name="t10">PLAY</string>
    <string name="t11">QUIT</string>
    <string name="t12">YES</string>
    <string name="t13">NO</string>
    <string name="t14">Which Mode You Wanna Play ??</string>
    <string name="t15">SINGLE USER</string>
    <string name="t16">MULTI-USER</string>
    <string name="t17">CREATE SERVER</string>
    <string name="t18">JOIN SERVER</string>
    <string name="t19">SINGLE USER</string>
    <string name="t20">MULTI-USER</string>
    <string name="quit_dialog_message">Are You Sure You Want To Exit?</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="Random">Random</string>
    <string name="GK">GK</string>
    <string name="Sports">Sports</string>
    <string name="Entertainment">Entertainment</string>
    <string name="History">History</string>
    <string name="Sci_tech">Sci-Tech</string>
    <string name="ChooseCategory">Choose Category</string>
    <string name="enable_p2p_button">P2P On/Off</string>
    <string name="discover_peers_button">Discover</string>
    <string name="connect_peer_button">Connect</string>
    <string name="disconnect_peer_button">Disconnect</string>
    <string name="get_file_button">Launch Gallery</string>
    <string name="empty"></string>
    <string name="yes">yes</string>
    <string name="no">no</string>
    <string name="client_text">This device will act as a client. Click on Gallery button to pick a local(stored) file</string>
    <string name="empty_message">No devices found. Turn on P2P and perform discovery from the Action Bar</string>
    <string name="p2p_off_warning">Enable P2P from action bar button above or system settings</string>
    <string name="group_owner_text">"Am I the Group Owner? "</string>
    <string name="label_me">ME</string>
    <string name="label_peers">PEERS</string>
    <string name="singleuser">Single User</string>
    <string name="multiuser">Multi User</string>
</resources>