<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="80dp"
    android:background="@drawable/profile_setup_background"
    android:id="@+id/relativeLayoutMainMenu">


    <Button
        android:id="@+id/buttonRandom"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/Random"
        android:textColor="#FFFFFF"
        android:background="#99d3d3d3"
        android:layout_marginTop="20dp"
        />

    <Button
        android:id="@+id/buttonGk"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/buttonRandom"
        android:text="@string/GK"
        android:textColor="#FFFFFF"
        android:layout_marginTop="20dp"
        android:background="#99d3d3d3"
        />

    <Button
        android:id="@+id/buttonSports"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/buttonGk"
        android:text="@string/Sports"
        android:textColor="#FFFFFF"
        android:layout_marginTop="20dp"
        android:background="#99d3d3d3"
        />

    <Button
        android:id="@+id/buttonEntertainment"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/buttonSports"
        android:text="@string/Entertainment"
        android:textColor="#FFFFFF"
        android:background="#99d3d3d3"
        android:paddingBottom="5dp"
        android:layout_marginTop="20dp"
        />

    <Button
        android:id="@+id/buttonHistory"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/buttonEntertainment"
        android:text="@string/History"
        android:textColor="#FFFFFF"
        android:layout_marginTop="20dp"
        android:background="#99d3d3d3"
        />

    <Button
        android:id="@+id/buttonSci_Tech"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/buttonHistory"
        android:text="@string/Sci_tech"
        android:textColor="#FFFFFF"
        android:layout_marginTop="20dp"
        android:background="#99d3d3d3"
        />




</RelativeLayout>
